--- a/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
@@ -73,6 +73,15 @@
             android:layout_marginRight="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_15" />
 
+        <TextView
+            android:id="@+id/no_result_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="No result"
+            android:visibility="gone"
+            android:textColor="@color/white_semitransparent"/>
+
     </RelativeLayout>
 
 
