--- a/SportsSideKick/app/src/main/res/layout/popup_manage_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_manage_chat.xml
@@ -2,9 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/popup_manage_chat_width"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimarySemiLight"
+    android:background="@drawable/popup_bottom_background"
     android:orientation="vertical"
-    android:clickable="true">
+    android:layout_marginBottom="@dimen/margin_30"
+    android:layout_marginEnd="@dimen/margin_60"
+    android:layout_marginStart="@dimen/margin_60"
+    android:layout_marginTop="@dimen/margin_30"
+    android:layout_gravity="center">
 
     <View
         android:id="@+id/top_vertical_spliter"
