--- a/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
@@ -496,7 +496,8 @@
             android:background="@null"
             android:layout_toEndOf="@id/reset_button"
             android:scaleType="centerInside"
-            android:src="@drawable/logout_button" />
+            android:src="@drawable/logout_button"
+            android:layout_marginStart="@dimen/margin_10"/>
     </RelativeLayout>
 
     <View
