Popups fixed update.

--- a/SportsSideKick/app/src/main/res/layout/chat_friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_friend_item.xml
@@ -9,7 +9,9 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:background="@null"
+        android:src="@drawable/blank_profile_rounded"/>
 
     <ImageView
         android:id="@+id/selected"
