--- a/SportsSideKick/app/src/main/res/layout/chat_member_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_member_item.xml
@@ -25,7 +25,7 @@
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/profile_image"
+        android:layout_below="@+id/image"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
