--- a/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
@@ -1,118 +1,154 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+   android:background="@color/green_dark_1" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="tv.sportssidekick.sportssidekick.fragment.instance.VideoChatFragment">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@null"
-        android:scaleType="centerCrop"
-        android:src="@drawable/background_login" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/light_green_1_semitransparent"
-        android:contentDescription="@null" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp">
-
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/being_your_call"
-            android:layout_alignStart="@+id/being_your_call"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/margin_30"
-            android:contentDescription="@null"
-            android:src="@drawable/ssk_logo" />
-
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/logo"
-            android:layout_centerHorizontal="true"
-            android:text="@string/video_chat_text_1"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="26sp" />
-
-        <TextView
-            android:id="@+id/text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text1"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/margin_20"
-            android:layout_marginTop="@dimen/margin_20"
-            android:text="@string/video_chat_text_2"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-
-        <Button
-            android:id="@+id/being_your_call"
-            style="@style/button_call"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text2"
-            android:layout_centerHorizontal="true"
-            android:text="@string/video_chat_button_text"
-            android:textColor="@color/white"
-            android:onClick="onBeingYourCallClick()"/>
-    </RelativeLayout>
-
-
     <RelativeLayout
         android:id="@+id/bottom"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
 
-        <Button
+        <ImageButton
             android:id="@+id/add_users_button"
             android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_margin="@dimen/margin_15"
             android:layout_toLeftOf="@+id/toggle_mic_button"
-            android:layout_height="wrap_content"
-            android:text="ADD USERS"
-            />
-        <Button
+            android:background="null"
+            android:src="@drawable/add_users_button"
+            android:text="ADD USERS" />
+
+        <ImageButton
             android:id="@+id/toggle_mic_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
+            android:layout_margin="@dimen/margin_15"
             android:layout_toLeftOf="@+id/toggle_video_button"
-            android:text="MIC"
-            />
-        <Button
+            android:background="null"
+            android:src="@drawable/enable_microphone_button" />
+
+        <ImageButton
             android:id="@+id/toggle_video_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_centerHorizontal="true"
-            android:text="VIDEO"
-            />
-        <Button
+            android:layout_margin="@dimen/margin_15"
+            android:background="null"
+            android:src="@drawable/video_call_button" />
+
+        <ImageButton
             android:id="@+id/toggle_camera_button"
-            android:layout_toRightOf="@+id/toggle_video_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TOGGLE CAM"
-            />
-        <Button
+            android:layout_height="60dp"
+            android:layout_margin="@dimen/margin_15"
+            android:layout_toRightOf="@+id/toggle_video_button"
+            android:background="null"
+            android:src="@drawable/flip_camera_button" />
+
+        <ImageButton
             android:id="@+id/disconnect_button"
             android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_margin="@dimen/margin_15"
             android:layout_toRightOf="@+id/toggle_camera_button"
+            android:background="null"
+            android:src="@drawable/hangup_button" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/active_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom">
+        <View
+            android:id="@+id/preview_view"
+            android:layout_margin="@dimen/margin_20"
+            android:background="@color/demo_green_semitransparent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <View
+            android:id="@+id/slot_1"
+            android:layout_margin="@dimen/margin_20"
+            android:background="@color/demo_yellow_semitransparent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/preview_view"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/inactive_container"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@null"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background_login" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/light_green_1_semitransparent"
+            android:contentDescription="@null" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="END CALL"
-            />
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp">
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/being_your_call"
+                android:layout_alignStart="@+id/being_your_call"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/margin_30"
+                android:contentDescription="@null"
+                android:src="@drawable/ssk_logo" />
+
+            <TextView
+                android:id="@+id/text1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/logo"
+                android:layout_centerHorizontal="true"
+                android:text="@string/video_chat_text_1"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="26sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/text2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/margin_20"
+                android:layout_marginTop="@dimen/margin_20"
+                android:text="@string/video_chat_text_2"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/being_your_call"
+                style="@style/button_call"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text2"
+                android:layout_centerHorizontal="true"
+                android:onClick="onBeingYourCallClick()"
+                android:text="@string/video_chat_button_text"
+                android:textColor="@color/white" />
+        </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
