--- a/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
@@ -3,20 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:layout_marginBottom="@dimen/margin_30"
     android:layout_marginEnd="@dimen/margin_60"
     android:layout_marginStart="@dimen/margin_60"
     android:layout_marginTop="@dimen/margin_30"
-    android:layout_gravity="center"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/chat_top_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimarySemiLight"
-        android:layout_above="@+id/bottom_buttons_container"
-        android:layout_alignParentTop="true">
+        android:layout_above="@+id/bottom_split_line"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimarySemiLight">
 
         <View
             android:id="@+id/top_vertical_spliter"
@@ -90,27 +90,27 @@
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
-        <View
-            android:id="@+id/bottom_split_line"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="@dimen/margin_60"
-            android:background="@android:color/black"
-            android:layout_below="@id/swipe_refresh_layout"/>
-
     </RelativeLayout>
+
+    <View
+        android:id="@+id/bottom_split_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_above="@+id/bottom_buttons_container"
+        android:background="@android:color/black" />
 
     <RelativeLayout
         android:id="@+id/bottom_buttons_container"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/popup_bottom_background"
-        android:layout_alignParentBottom="true">
+        android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/popup_bottom_background">
 
         <EditText
             android:id="@+id/search_edit_text"
             android:layout_width="@dimen/popup_join_chat_search_edit_text_width"
             android:layout_height="@dimen/popup_join_chat_search_edit_text_height"
+            android:background="@drawable/popup_bottom_left_background"
             android:gravity="start|center_vertical"
             android:hint="Search for a chat"
             android:imeOptions="flagNoExtractUi|actionSearch"
@@ -120,18 +120,19 @@
             android:paddingStart="@dimen/padding_40"
             android:textColor="@color/white"
             android:textColorHint="@color/white_semitransparent"
-            android:textSize="14sp"
-            android:background="@drawable/popup_bottom_left_background"/>
+            android:textSize="14sp" />
 
-        <Button
+        <ImageButton
             android:id="@+id/confirm_button"
-            android:layout_width="@dimen/popup_join_chat_confirm_button_width"
-            android:layout_height="@dimen/popup_join_chat_confirm_button_height"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="@dimen/margin_15"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="@dimen/margin_30"
             android:layout_marginEnd="@dimen/margin_20"
             android:layout_marginStart="@dimen/margin_30"
-            android:background="@drawable/popup_confirmation_button"
-            android:layout_centerVertical="true"/>
+            android:background="@null"
+            android:scaleType="centerInside"
+            android:src="@drawable/popup_confirmation_button" />
     </RelativeLayout>
 </RelativeLayout>
