--- a/SportsSideKick/app/src/main/res/layout/comment_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/comment_item.xml
@@ -7,6 +7,7 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/profil_iamge"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginLeft="@dimen/margin_15"
@@ -27,6 +28,7 @@
             android:background="@drawable/chat_bubble"/>
 
         <TextView
+            android:id="@+id/message_information"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/comment_text"
