--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -2,20 +2,167 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tv.sportssidekick.sportssidekick.fragment.instance.WallFragment"
-    android:background="@color/colorAccentLight">
+    android:background="@color/colorAccentLight"
+    tools:context="tv.sportssidekick.sportssidekick.fragment.instance.WallFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_wall_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/fragment_wall_bottom_bar"/>
+        android:layout_above="@+id/fragment_wall_bottom_bar" />
+
+    <RelativeLayout
+        android:id="@+id/your_post_container"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_above="@+id/fragment_wall_bottom_bar"
+        android:layout_alignParentStart="true"
+        android:background="@color/colorPrimary"
+        android:visibility="gone">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/vertical_separator" >
+
+            <EditText
+                android:id="@+id/comment_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_margin="@dimen/margin_10"
+                android:backgroundTint="@color/colorPrimary"
+                android:hint="Write your post here."
+                android:textColor="@color/white"
+                android:layout_toLeftOf="@+id/post_commnent_button"
+                android:textColorHint="@color/colorPrimarySemiLight" />
+
+            <ImageView
+                android:id="@+id/post_commnent_button"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:src="@drawable/btn_send"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:tint="@color/colorPrimarySemiLight" android:layout_alignParentEnd="true"
+                android:visibility="visible"/>
+
+        </RelativeLayout>
+
+
+        <View
+            android:id="@+id/vertical_separator"
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/media_buttons"
+            android:background="@color/light_green_1_semitransparent" />
+
+        <LinearLayout
+            android:id="@+id/media_buttons"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/button_image"
+                android:tint="@color/colorPrimarySemiLight" />
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/button_camera"
+                android:tint="@color/colorPrimarySemiLight" />
+
+        </LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/wall_filter_container"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_above="@+id/fragment_wall_bottom_bar"
+        android:layout_alignParentStart="true"
+        android:background="@color/colorPrimary"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <ToggleButton
+                style="@style/toggle_button_filter"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textOff="News"
+                android:textOn="News" />
+
+            <ToggleButton
+                style="@style/toggle_button_filter"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textOff="User"
+                android:textOn="User" />
+
+            <ToggleButton
+                style="@style/toggle_button_filter"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textOff="Stats"
+                android:textOn="Stats" />
+
+            <ToggleButton
+                style="@style/toggle_button_filter"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textOff="Rumours"
+                android:textOn="Rumours" />
+
+            <ToggleButton
+                style="@style/toggle_button_filter"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textOff="Store"
+                android:textOn="Store" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/search_wall_post"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_above="@+id/fragment_wall_bottom_bar"
+        android:layout_alignParentStart="true"
+        android:background="@color/colorPrimary"
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/searhc_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/margin_10"
+            android:backgroundTint="@color/colorPrimary"
+            android:hint="Search Wall Posts"
+            android:textColor="@color/white"
+            android:textColorHint="@color/colorPrimarySemiLight" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/fragment_wall_bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:background="@color/colorPrimary"
+        android:background="@color/green_dark_2_semitransparent"
+        android:gravity="center_horizontal"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">
 
@@ -23,60 +170,63 @@
             android:id="@+id/fragment_wall_new_post"
             android:layout_width="@dimen/wall_button_size"
             android:layout_height="@dimen/wall_button_size"
-            android:background="@drawable/wall_new_post_selector"
-            android:layout_marginStart="@dimen/padding_16"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/padding_8"
-            android:layout_centerVertical="true"/>
+            android:layout_marginStart="@dimen/padding_16"
+            android:background="@drawable/wall_new_post_selector" />
 
         <Button
             android:id="@+id/fragment_wall_notification"
             android:layout_width="@dimen/wall_button_size"
             android:layout_height="@dimen/wall_button_size"
-            android:background="@drawable/wall_notification_selector"
-            android:layout_toEndOf="@id/fragment_wall_new_post"
-            android:layout_marginStart="@dimen/padding_8"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/padding_8"
-            android:layout_centerVertical="true"/>
+            android:layout_marginStart="@dimen/padding_8"
+            android:layout_toEndOf="@id/fragment_wall_new_post"
+            android:background="@drawable/wall_notification_selector"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/fragment_wall_filter"
             android:layout_width="@dimen/wall_button_size"
             android:layout_height="@dimen/wall_button_size"
-            android:background="@drawable/wall_filter_selector"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:layout_marginStart="@dimen/margin_20"
             android:layout_toEndOf="@id/fragment_wall_notification"
-            android:layout_marginStart="@dimen/padding_8"
-            android:layout_marginEnd="@dimen/padding_8"
-            android:layout_centerVertical="true"/>
+            android:background="@drawable/wall_filter_selector" />
 
         <Button
             android:id="@+id/fragment_wall_following"
             android:layout_width="@dimen/wall_button_size"
             android:layout_height="@dimen/wall_button_size"
-            android:background="@drawable/wall_following_selector"
-            android:layout_toEndOf="@id/fragment_wall_filter"
-            android:layout_marginStart="@dimen/padding_8"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/padding_8"
-            android:layout_centerVertical="true"/>
+            android:layout_marginStart="@dimen/padding_8"
+            android:layout_toEndOf="@id/fragment_wall_filter"
+            android:background="@drawable/wall_following_selector"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/fragment_wall_search"
             android:layout_width="@dimen/wall_button_size"
             android:layout_height="@dimen/wall_button_size"
-            android:background="@drawable/wall_search_selector"
-            android:layout_toEndOf="@id/fragment_wall_following"
-            android:layout_marginStart="@dimen/padding_8"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/padding_16"
-            android:layout_centerVertical="true"/>
+            android:layout_marginStart="@dimen/padding_8"
+            android:layout_toEndOf="@id/fragment_wall_following"
+            android:background="@drawable/wall_search_selector" />
 
         <Button
             android:id="@+id/fragment_wall_full_screen"
             android:layout_width="@dimen/wall_button_size"
             android:layout_height="@dimen/wall_button_size"
-            android:background="@drawable/ic_fullscreen"
-            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/padding_16"
             android:layout_marginStart="@dimen/padding_16"
-            android:layout_marginEnd="@dimen/padding_16"/>
+            android:background="@drawable/ic_fullscreen"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
